syntax = "proto3";
package person;


// The Person service definition.
service Person {   
  // Get all Persons with filter - A server-to-client streaming RPC.
  rpc GetPersons(PersonFilter) returns (stream PersonRequest) {}
  // Create a new Person - A simple RPC 
  rpc CreatePerson (PersonRequest) returns (PersonResponse) {}
}

// Request message for creating a new person
message PersonRequest {
  int32 id = 1;  // Unique ID number for a Person.
  string name = 2;
  string email = 3;
  string phone= 4;
  
  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5; 
  }

  repeated Address addresses = 5;
}

message PersonResponse {
  int32 id = 1;
  bool success = 2;
}
message PersonFilter {    
  string keyword = 1;
}